# neural-reversi

./: .editorconfig  .gitignore  Cargo.toml  Makefile.toml  NOTICE  README.md  about.hbs  about.toml  rust-toolchain.toml
.github/workflows/: test.yml
automatch/: Cargo.toml  README.md
automatch/src/: config.rs  display.rs  engine.rs  error.rs  (+4 more)
build_common/: Cargo.toml
codegen/: Cargo.toml  README.md
crates/cli/: Cargo.toml  README.md  THIRD_PARTY_LICENSES.txt  build.rs  init.ggs.example
crates/cli/src/: config.rs  game.rs  ggs.rs  gtp.rs  main.rs  solve.rs  tui.rs  ui.rs
crates/cli/src/ggs/: connection.rs  protocol.rs  session.rs  time.rs
crates/cli/src/tui/: app.rs  event.rs  parse.rs  render.rs
crates/cli/src/tui/widgets/: board.rs
crates/cli/tests/: ggs_session.rs  solve_all_moves.rs
crates/cli/tests/fixtures/ggs/: short-script.txt
crates/datagen/: Cargo.toml  README.md
crates/datagen/src/: feature.rs  main.rs  opening.rs  overwrite_scores.rs  probcut.rs  record.rs  rescore.rs  score_openings.rs  selfplay.rs  shuffle.rs
crates/match-runner/: Cargo.toml  README.md
crates/match-runner/src/: config.rs  display.rs  engine.rs  error.rs  game.rs  main.rs  match_runner.rs  statistics.rs  time_tracker.rs
crates/reversi-core/: Cargo.toml  README.md  build.rs
crates/reversi-core/benches/: bitboard.rs  common.rs  count_last_flip.rs  endgame.rs  flip.rs  move_list.rs  network.rs  pattern_feature.rs  perft.rs  solve1.rs  stability.rs
crates/reversi-core/src/: bitboard.rs  board.rs  constants.rs  count_last_flip.rs  disc.rs  empty_list.rs  eval.rs  flip.rs  game_state.rs  level.rs  lib.rs  move_list.rs  obf.rs  perft.rs  piece.rs  probcut.rs  search.rs  square.rs  stability.rs  transposition_table.rs  types.rs  util.rs
crates/reversi-core/src/bitboard/: movegen.rs  movegen_tests.rs  moves_tests.rs  tests.rs
crates/reversi-core/src/count_last_flip/: count_last_flip_bmi2.rs  count_last_flip_kindergarten.rs  count_last_flip_portable.rs
crates/reversi-core/src/eval/: activations.rs  eval_cache.rs  input_layer.rs  linear_layer.rs  network.rs  network_small.rs  output_layer.rs  pattern_feature.rs  pattern_table_data.rs  util.rs
crates/reversi-core/src/eval/input_layer/: base_input.rs  phase_adaptive_input.rs
crates/reversi-core/src/eval/network/: activations.rs  input_layer.rs  layer_stack.rs  linear_layer.rs  output_layer.rs
crates/reversi-core/src/eval/network/input_layer/: base_input.rs  phase_adaptive_input.rs
crates/reversi-core/src/flip/: flip_avx2.rs  flip_avx512.rs  flip_bmi2.rs  flip_kindergarten.rs  flip_neon.rs  flip_portable.rs  flip_wasm_simd.rs  lrmask.rs
crates/reversi-core/src/move_list/: iterator.rs  move_array.rs  ordering.rs  tests.rs
crates/reversi-core/src/search/: endgame.rs  endgame_cache.rs  midgame.rs  node_type.rs  options.rs  root_move.rs  search_context.rs  search_counters.rs  search_result.rs  search_stack.rs  search_strategy.rs  side_to_move.rs  threading.rs  time_control.rs
crates/reversi-core/src/search/endgame/: solve.rs
crates/reversi-core/src/transposition_table/: tests.rs
crates/reversi-core/src/util/: align.rs  aligned_buffer.rs  bitset.rs  spinlock.rs
crates/reversi-core/tests/: endgame_tests.rs  parallel_search_tests.rs  perft_tests.rs
crates/web/: .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  README.md  benchmark.html  benchmark.js  board3d.js  endgame-bench.js  index.html  main.js  network-bench.js  package-lock.json  package.json  playwright.config.js  probcut-cli.js  reversi-worker.js  styles.css  vite.config.js  wasm-loader.js  weight-match.js  weight-tournament.js
crates/web/scripts/: endgame-bench.js  network-bench.js  probcut-cli.js  weight-match.js  weight-tournament-worker.js  weight-tournament.js  weight-tournament.test.js
crates/web/src/: benchmark.rs  config.rs  endgame_solver.rs  eval.rs  game.rs  level.rs  lib.rs  move_list.rs  probcut.rs  probcut_datagen.rs  search.rs  transposition_table.rs  weight_match.rs
crates/web/src/eval/: network.rs
crates/web/src/search/: endgame.rs  endgame_cache.rs  search_context.rs  search_result.rs  search_strategy.rs  search_task.rs
crates/web/tests/e2e/: app.spec.js
datagen/: Cargo.toml  README.md  build.rs
datagen/src/: feature.rs  main.rs  opening.rs  probcut.rs  selfplay.rs  shuffle.rs
ffotest/: Cargo.toml  README.md  build.rs
match_runner/: Cargo.toml  README.md
problem/: README.md  small-35.txt
reversi_cli/: Cargo.toml  README.md  build.rs
reversi_cli/src/: game.rs  gtp.rs  main.rs  solve.rs  ui.rs
reversi_cli/src/tui/: app.rs  mod.rs  render.rs
reversi_cli/src/tui/widgets/: board.rs  mod.rs
reversi_core/: Cargo.toml  README.md
reversi_core/benches/: network.rs
reversi_core/src/: bit.rs  bitboard.rs  board.rs  constants.rs  count_last_flip.rs  empty_list.rs  eval.rs  flip.rs  flip_avx.rs  flip_avx2.rs  flip_avx512.rs  flip_bmi2.rs  game_state.rs  level.rs  lib.rs  misc.rs  move_list.rs  perft.rs  probcut.rs  search.rs  square.rs  stability.rs  transposition_table.rs  types.rs  util.rs
reversi_core/src/count_last_flip/: count_last_flip_bmi2.rs  count_last_flip_kindergarten.rs
reversi_core/src/eval/: activations.rs  base_input.rs  constants.rs  eval_cache.rs  input_layer.rs  layer_stack.rs  linear_layer.rs  network.rs  network_small.rs  output_layer.rs  pattern_feature.rs  phase_adaptive_input.rs  relu.rs  universal_input.rs  util.rs
reversi_core/src/flip/: flip_avx2.rs  flip_avx512.rs  flip_bmi2.rs  flip_kindergarten.rs
reversi_core/src/search/: endgame.rs  endgame_cache.rs  midgame.rs  options.rs  root_move.rs  search_context.rs  search_phase.rs  search_result.rs  spinlock.rs  threading.rs  time_control.rs
reversi_core/src/util/: align.rs  bitset.rs  spinlock.rs
reversi_core/tests/: endgame_tests.rs
reversi_gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
reversi_web/: Cargo.toml  README.md  index.html  package-lock.json  package.json  reversi-worker.js  styles.css  vite.config.js
tests/: endgame_tests.rs  perft_tests.rs
time_debug/: Cargo.toml  README.md
(+343 files in other folders)
