[workspace]
members = [
    "crates/cli",
    "crates/datagen",
    "crates/evaltest",
    "crates/gui/src-tauri",
    "crates/match-runner",
    "crates/reversi-core",
    "crates/time-debug",
    "crates/web",
]
resolver = "2"

[workspace.package]
version = "5.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
