[package]
name = "datagen"
version = "0.8.1"
edition = "2021"
build = "build.rs"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.28", features = ["derive"] }
chrono = "0.4"
rand = "0.9.0"
rayon = "1.10.0"
zstd = "0.13.2"
regex = "1.9.5"
indicatif = "0.17.11"
anyhow = "1.0.98"
bytemuck = "1.23.0"
glob = "0.3.2"
reversi_core = { path = "../reversi_core" }

[build-dependencies]
build_common = { workspace = true }
