[package]
name = "datagen"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.40", features = ["derive"] }
chrono = "0.4"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
indicatif = "0.18.0"
anyhow = "1.0.98"
bytemuck = "1.23.1"
glob = "0.3.2"
reversi_core = { path = "../reversi_core" }
zstd = "0.13"

[build-dependencies]
build_common = { workspace = true }
