[package]
name = "datagen"
version.workspace = true
edition.workspace = true

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.11.2"
indicatif = "0.18.3"
anyhow = "1.0.100"
bytemuck = "1.24.0"
glob = "0.3.3"
reversi_core = { path = "../reversi_core" }
zstd = "0.13"
