[package]
name = "reversi_cli"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
reversi_core = { path = "../reversi_core" }
rustyline = "17.0.1"

[build-dependencies]
build_common = { workspace = true }

[[bin]]
name = "neural-reversi-cli"
path = "src/main.rs"
