[package]
name = "reversi_cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"
reversi_core = { path = "../reversi_core" }
rustyline = "17.0.2"

[[bin]]
name = "neural-reversi-cli"
path = "src/main.rs"
