[package]
name = "reversi_core"
version.workspace = true
edition.workspace = true

[dependencies]
aligned-vec = "0.6.4"
byteorder = "1.5.0"
cfg-if = "1.0.4"
lock_api = "0.4.14"
num_cpus = "1.17.0"
rand = "0.9.2"
rapidhash = "4.1.1"
zstd = "0.13.3"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "network"
harness = false

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "bitboard"
harness = false
