[package]
name = "datagen"
version.workspace = true
edition.workspace = true

[dependencies]
byteorder = "1.5.0"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
rand = "0.10"
rayon = "1.11"
regex = "1.11"
indicatif = "0.18"
anyhow = "1.0"
bytemuck = "1.24"
glob = "0.3"
reversi-core = { path = "../reversi-core" }
zstd = "0.13"
