[package]
name = "match-runner"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
reversi-core = { path = "../reversi-core" }
indicatif = "0.18"
colored = "3"

[target.'cfg(not(windows))'.dependencies]
shlex = "1.3.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Threading",
] }

[[bin]]
name = "match-runner"
path = "src/main.rs"
