[package]
name = "reversi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
search-stats = []

[dependencies]
aligned-vec = "0.6"
arrayvec = "0.7"
byteorder = "1.5"
lock_api = "0.4"
num_cpus = "1.17"
rand = "0.10"
rapidhash = { version = "4.4", features = ["unsafe"] }
zstd = "0.13"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "network"
harness = false

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "bitboard"
harness = false

[[bench]]
name = "flip"
harness = false

[[bench]]
name = "count_last_flip"
harness = false
