[package]
name = "web"
description = "Neural Reversi WebAssembly"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
byteorder = "1.5.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
reversi-core = { path = "../reversi-core" }
rand = "0.9.2"
web-sys = {version = "0.3.82", features = ["Window", "Performance", "console"]}
js-sys = "0.3.82"
zstd = "0.13.3"
console_error_panic_hook = "0.1.7"

[package.metadata.wasm-bindgen]
wasm_features = ["simd128"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-simd", "--enable-nontrapping-float-to-int"]
